# ChangeLog for net-analyzer/isic
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/isic/ChangeLog,v 1.18 2011/12/19 18:37:24 ago Exp $

  19 Dec 2011; Agostino Sarubbo <ago@gentoo.org> isic-0.07-r1.ebuild:
  Stable for AMD64, wrt bug #393895

  14 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> isic-0.07-r1.ebuild:
  x86 stable wrt bug #393895

  20 Aug 2011; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Remove useless maintainer tag.

*isic-0.07-r1 (11 Jun 2011)

  11 Jun 2011; Jeroen Roovers <jer@gentoo.org> +isic-0.07-r1.ebuild:
  Fix build failure (bug #351285). Install man page in the appropriate place
  (bug #247953). Move econf to src_configure(). Use emake instead of make.
  Remove unused inherit.

  06 Sep 2007; Markus Ullmann <jokey@gentoo.org>
  -files/isic-0.06-gcc4.patch, -files/isic-0.06-makefile.patch,
  -isic-0.06.ebuild:
  Cleanup

  20 Mar 2007; Raúl Porcel <armin76@gentoo.org> isic-0.07.ebuild:
  x86 stable

*isic-0.07 (25 Jan 2007)

  25 Jan 2007; Marcelo Goes <vanquirius@gentoo.org> +isic-0.07.ebuild:
  0.07 version bump. Updated HOMEPAGE, SRC_URI. gcc and makefile patches no
  longer necessary. Includes ipv6 tools.

  16 Aug 2005; Simon Stelling <blubb@gentoo.org> isic-0.06.ebuild:
  added ~amd64 keyword

  29 Jul 2005; Daniel Black <dragonheart@gentoo.org> isic-0.06.ebuild:
  removed die from epatch || die.

  19 Jul 2005; David Holm <dholm@gentoo.org> isic-0.06.ebuild:
  Added to ~ppc.

  10 Apr 2005; Marcelo Goes <vanquirius@gentoo.org>
  +files/isic-0.06-gcc4.patch, isic-0.06.ebuild:
  Adding gcc-4 patch from Debian.

  09 Jan 2005; Daniel Black <dragonheart@gentoo.org> metadata.xml,
  -files/0.05-libnet-1.0.patch, -isic-0.05-r1.ebuild, -isic-0.05.ebuild,
  isic-0.06.ebuild:
  Removed old version as per bug #75193. Old versions had dependancy errors.
  Vanquirius <marcelogoes@gmail.com> confirmed the new version is working.

*isic-0.06 (08 Jan 2005)
