@@ -2,18 +2,18 @@
 Hash: SHA512
 
 DIST isic-0.07.tgz 39823 RMD160 1f06dddc2a120bdfed471b487cc00c7d22b59ae2 SHA1 185de415378894ec5248c158d77395d46ce98d4a SHA256 e033c53e03e26a4c72b723e2a5a1c433ee70eb4d23a1ba0d7d7e14ee1a80429d
-EBUILD isic-0.07-r1.ebuild 940 RMD160 42507fe152d7b9211cf455fa6d946785bb359dac SHA1 0b102d73b62bbe2ec5fc23ebf4346cefa4fc3771 SHA256 aa7ed7fe3d776edc860ea11844a78714d833a1be50c8ef9c8381ab878c4ab682
+EBUILD isic-0.07-r1.ebuild 986 RMD160 ed30e4a66193e60c2525307fec612bc2054a8173 SHA1 b1b5c0afc96e9c8e00875e223a8ff90569a4b7d6 SHA256 bec5f33b7d2ba40cd6146a4befc8ddaccdae26ef78c690ee837d9c4f9472601a
 EBUILD isic-0.07.ebuild 650 RMD160 b83bea52cb80e03511044ce17c50388dcef3c7e9 SHA1 abd409e839c921b5781d03d0d2fbaf0ec55f8594 SHA256 5d65b5ba772ca75791b940ba6858704670ca05df619cebb74d173401ba360395
-MISC ChangeLog 2665 RMD160 85b6f332330f616f73b919d73b6adb9de1ae3744 SHA1 8aa91976b76510730d3af0891f8f6f48b488a2bf SHA256 c4cd157fe53d1ccad8df068cce65a9288989ae40280de249b3ade0cc21611fd0
+MISC ChangeLog 2756 RMD160 9f082fe516a0555af32280813c0ac05226492b7c SHA1 2afea9f5f569a7de0f6734dc39e1934e31f0cfb2 SHA256 4a1df84b85e1b99984b9fe7e7c31b70bd4485824b8b9173edb20dce89e70050f
 MISC metadata.xml 221 RMD160 7674d6a5d8579f0b96fc988e52ac9cb3c2d9ac52 SHA1 4fc8d4a7c17ed5de19029e519f16139e355ee503 SHA256 473bc88bdb217d4184cd29d116b906c2579c3ecaa1954b6e55f62cccea21b53e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBCgAGBQJO74R2AAoJEOTDgjZ80txdhJgH+wV5cXBG6knrsjFD6vjFbtjr
-nIvB6e2703bF8DXuQds532j4ZsfDOlaori7SsRi843ZTkaYyvrHLLubYPSKURswA
-jxzflOb+fFMHAkp52ZvniN237eVjjfkmm0xn0scpj43JMW6VZAeCUblfrqWk2KA0
-PUMGLoqPdI1MLFbVS6DmxcV3O4wYLje5HlhbilCwzpSdI/1sIqZ8hX3l9wZC4ut0
-fjb6bKicOb+Lvocm0di5UodJtiNDD4km6Ie+zMyPZxSd5oFV4Aw4QOA61d69tIip
-Wkpjpl2rqUUojXQTjrs5jOz1U3sS2UH6+52tFgGxY38mrscJibGJNq/mkNrAo7o=
-=rLzw
+iQEcBAEBCgAGBQJO782/AAoJEEqz6FtPBkyjvOoH/1BubnEO/N3FKEz41YMSn4/F
+W+/ZHQEeDkw/E8OsZsRT4sj/3HLci0V1XVR0Ghrvv5Cg1xxLF81hHseu7sckcC9g
+OU89GUDbEmOfL4tSUVnolXSD24t8lYXQpWsKOJilmdiZkKu44JTah2nMDuvIU0TS
+f/mze1nV6FJzcv+L/N579ZfSyuR7nuz5uR+xy0Jl6a/7QdsNEAo5YuHPaI+YaXh6
+vXAZEP2YfcxDWG1vyP7pSRXueU6WPa/3q7Adtpm8B7DOeBBSG8+gV0ZwRBYINGoj
+SPTuKmEWzCk3peKsFiik4ng57JrJvQ9h9kYo3Enio8e0LVVP5Ftd435MKSEjmJs=
+=WAvf
 -----END PGP SIGNATURE-----
