@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/isic
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/isic/ChangeLog,v 1.18 2011/12/19 18:37:24 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/isic/ChangeLog,v 1.19 2011/12/19 23:50:17 radhermit Exp $
+
+  19 Dec 2011; Tim Harder <radhermit@gentoo.org> isic-0.07-r1.ebuild:
+  Respect CC.
 
   19 Dec 2011; Agostino Sarubbo <ago@gentoo.org> isic-0.07-r1.ebuild:
   Stable for AMD64, wrt bug #393895
